kubernetes/gitea/base/meilisearch/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-meilisearch
  namespace: gitea
  labels:
    helm.sh/chart: meilisearch-0.2.5
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/version: "v1.4.0"
    app.kubernetes.io/component: search-engine
    app.kubernetes.io/part-of: meilisearch
    app.kubernetes.io/managed-by: Helm
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 1
  serviceName: gitea-meilisearch
  selector:
    matchLabels:
      app.kubernetes.io/name: meilisearch
      app.kubernetes.io/instance: gitea
  template:
    metadata:
      labels:
        helm.sh/chart: meilisearch-0.2.5
        app.kubernetes.io/name: meilisearch
        app.kubernetes.io/instance: gitea
        app.kubernetes.io/version: "v1.4.0"
        app.kubernetes.io/component: search-engine
        app.kubernetes.io/part-of: meilisearch
        app.kubernetes.io/managed-by: Helm
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      serviceAccountName: gitea-meilisearch
      securityContext:
        # fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        # runAsGroup: 1000
        runAsNonRoot: true
        # runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir: {}
        - name: data
          emptyDir: {}
      containers:
        - name: meilisearch
          # renovate: datasource=docker depName=docker.io/getmeili/meilisearch
          image: docker.io/getmeili/meilisearch:v1.54.3@sha256:e68913ab7d6f5b159529e472cfd362ce3c741fafd3c127961b2142abbe41b3c9
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: data
              mountPath: /meili_data
          ports:
            - name: http
              containerPort: 7700
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 1
            initialDelaySeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            initialDelaySeconds: 0
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            initialDelaySeconds: 0
          resources:
            limits:
              cpu: 15m
              memory: 386Mi
            requests:
              cpu: 5m
              memory: 128Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
      enableServiceLinks: false
